feat(fizzbuzz): add fizzbuzz handler
